service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webirc
  namespace: webirc
  labels:
    app: webirc
spec:
  ports:
    - name: http
      port: 9000
  selector:
    app: webirc
  type: ClusterIP
