ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
  name: webirc
  namespace: webirc
spec:
  ingressClassName: traefik
  rules:
    - host: chat.ryzen.me
      http:
        paths:
          - backend:
              service:
                name: webirc
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - chat.ryzen.me
      secretName: webirc-tls
